# fast_zero

./: .gitignore  pyproject.toml
fast_zero/: app.py
migrations/versions/: ed33c78c2777_create_users_table.py
tests/: conftest.py  test_app.py
