[project]
name = "fast-zero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.11",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.10",
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'uv run ruff check'
pre_format = 'uv run ruff check --fix'
format = 'ruv run ruff format'
run = 'uv run fastapi dev fast_zero/app.py'
pre_test = 'uv run task lint'
test = 'uv run pytest -s -x --cov=fast_zero -vv'
post_test = 'uv run coverage html'
